=== x.x.x 2013-03-01

* gh-130[https://github.com/turboladen/tailor/issues/130]
  * AllowInvalidRubyRuler now handles file names with spaces in them.
* gh-131[https://github.com/turboladen/tailor/issues/131]
  * Added YAML output formatter.  Thanks @leandronsp!

=== 1.1.5 2013-01-30

* gh-127[https://github.com/turboladen/tailor/issues/127]
  * The last fix had SystemExit being displayed to the user at all times (since
    it should've been getting rescued from when the program exits).  Properly
    rescuing this now for Rake tasks, so it now behaves just like bin/tailor in
    this respect.

=== 1.1.4 2013-01-29

* gh-127[https://github.com/turboladen/tailor/issues/127]
  * RakeTask now actually does something (works).
* tailor should now abort (and let you know) when it can't find the config file
  that you told it to use.  Previously, it would just fall back to default
  settings.

=== 1.1.3 2013-01-28

* gh-121[https://github.com/turboladen/tailor/issues/121]
  * Camel case methods are now detected properly when used inside of a class.
    Thanks @jasonku!

=== 1.1.2 2012-06-01

* gh-101[https://github.com/turboladen/tailor/issues/101]
  * Tailor now handles code that uses backslashes to break up statements to
    multiple lines.  Note that this is somewhat of a hack, since Ripper does not
    tokenize these backslashes--it actually just treats what we see as 2 lines
    of code as a single line of code.  In order to preserve line numbering and
    indentation tracking, tailor replaces the backslash with a special comment
    that it can detect and handle accordingly.  While this isn't ideal, given
    the current design, it seemed like the way to deal with this.
* gh-103[https://github.com/turboladen/tailor/issues/103]
  * Tailor now properly handles string interpolation inside string
    interpolation.
  
=== 1.1.1 2012-05-31

* gh-110[https://github.com/turboladen/tailor/issues/110]
  * Tailor now exits with 0 if non-error problems are found.
  